--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-    "name": "cail",
+    "name": "tracer",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
         "docs:dev": "vuepress dev docs",
-        "docs:build": "vuepress build docs"
+        "docs:build": "vuepress build docs",
+        "deploy": "deploy"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@ddongui/deploy": "^0.0.8",
         "@types/node": "^20.5.0",
         "@vuepress/client": "2.0.0-beta.66",
         "typescript": "^5.1.6",
