--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@ddongui/deploy": "^0.0.8",
         "@types/node": "^20.5.0",
         "@vuepress/client": "2.0.0-beta.66",
+        "tsup": "^7.2.0",
         "typescript": "^5.1.6",
         "vue": "^3.3.4",
         "vuepress": "2.0.0-beta.66"
