--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "docs:dev": "vuepress dev docs",
         "docs:build": "vuepress build docs",
-        "deploy": "deploy"
+        "deploy": "deploy",
+        "test": "vitest"
     },
     "keywords": [],
     "author": "",
@@ -17,6 +18,7 @@
         "@vuepress/client": "2.0.0-beta.66",
         "tsup": "^7.2.0",
         "typescript": "^5.1.6",
+        "vitest": "^0.34.2",
         "vue": "^3.3.4",
         "vuepress": "2.0.0-beta.66"
     }
