--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@tracer/node": "workspace:^",
+        "@tracer/utils": "workspace:^",
         "commander": "^11.0.0"
     },
     "exports": {
