--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,9 +2,10 @@
   "name": "@tracer/utils",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsup"
   },
   "keywords": [],
   "author": "",
