新增：打包加载配置文件

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -17,5 +17,12 @@
             "require": "./dist/index.js"
         },
         "./package.json": "./package.json"
+    },
+    "dependencies": {
+        "@tracer/utils": "workspace:^",
+        "esbuild": "^0.19.2"
+    },
+    "devDependencies": {
+        "@types/node": "^20.5.0"
     }
 }
