--- a/playground/package.json
+++ b/playground/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "type": "module",
     "scripts": {
         "tracer:build": "tracer build",
         "tracer:dev": "tracer dev"
