--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "type": "module",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^20.5.0"
+  }
 }
