--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -20,9 +20,11 @@
     },
     "dependencies": {
         "@tracer/utils": "workspace:^",
-        "esbuild": "^0.19.2"
+        "esbuild": "^0.19.2",
+        "fs-extra": "^11.1.1"
     },
     "devDependencies": {
+        "@types/fs-extra": "^11.0.1",
         "@types/node": "^20.5.0"
     }
 }
