--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "moduleResolution": "node",
         "module": "esnext",
-        "typeRoots": ["node_modules/@types"]
+        "typeRoots": ["node_modules/@types"],
+        "target": "ESNext"
     },
     "include": ["packages/**/**/*", "types/**/*"]
 }
