--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "license": "ISC",
     "devDependencies": {
         "@ddongui/deploy": "^0.0.8",
+        "@types/debug": "^4.1.8",
         "@types/node": "^20.5.0",
         "@vuepress/client": "2.0.0-beta.66",
         "tsup": "^7.2.0",
