--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -13,5 +13,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.5.0"
+  },
+  "dependencies": {
+    "chalk": "^5.3.0",
+    "debug": "^4.3.4"
   }
 }
