--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "@tracer/client",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "@tracer/client",
+    "version": "1.0.0",
+    "description": "",
+    "type": "module",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "scripts": {},
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "exports": {
+        "./templates/": "./templates/"
+    }
 }
