--- a/packages/bundler/package.json
+++ b/packages/bundler/package.json
@@ -2,10 +2,11 @@
     "name": "@tracer/bundler",
     "version": "1.0.0",
     "description": "",
+    "type": "module",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "tsup"
     },
     "keywords": [],
     "author": "",
