调整：文档 完善：客户端 修复：启动bug

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "docs:dev": "vuepress dev docs",
         "docs:build": "vuepress build docs",
-        "deploy": "deploy",
+        "deploy": "vuepress build docs && deploy",
         "test": "vitest"
     },
     "keywords": [],
