修复：测试用例错误 完善：npmAnalyzer，yarnAnalyzer，

--- a/packages/bundler/package.json
+++ b/packages/bundler/package.json
@@ -15,6 +15,7 @@
         "@tracer/node": "workspace:^",
         "@tracer/utils": "workspace:^",
         "@vitejs/plugin-vue": "^4.3.3",
+        "debug": "^4.3.4",
         "vite": "^4.4.9"
     }
 }
