新增：plugin-output插件

--- a/packages/plugins/plugin-output/package.json
+++ b/packages/plugins/plugin-output/package.json
@@ -12,6 +12,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@tracer/node": "workspace:^"
+        "@tracer/node": "workspace:^",
+        "@tracer/utils": "workspace:^",
+        "fs-extra": "^11.1.1"
     }
 }
